--- a/main.css
+++ b/main.css
@@ -14,8 +14,8 @@ body{
     overflow-x: hidden;
 
 }
-.header{
-    position: absolute;
+header{
+    position: static;
     margin-top: 5px;
     top: 0;
     left: 0;
@@ -26,7 +26,7 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.header .logo{
+header .logo{
     color: #ffffff;
     font-weight: 700;
     text-decoration: none;
@@ -34,23 +34,23 @@ body{
     text-transform: uppercase;
     letter-spacing: 2px;
 }
-.header ul{
+header ul{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.header ul li{
+header ul li{
     list-style: none;
     
     margin-left: 15px;
 }
-.header ul li a{
+header ul li a{
     text-decoration: none;
     padding: 6px 15px;
     color: white;
     border-radius: 20px;
 }
-.header ul li a img{
+header ul li a img{
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -118,7 +118,7 @@ div.pullDown a:hover:before
 {
     height: 100%;
 }
-
+/*-----------------------------------------------slider------------------------------------*/
 .swiper{
     margin-top: 10%;
     width: 80%;
@@ -127,12 +127,19 @@ div.pullDown a:hover:before
 .swiper-slide img{
     width: 100%;
 }
+#h3{
+    margin-top: 50px;
+    margin-left: 130px;
+    color: #FFF;
+}
+
 .options{
-    margin-top: 70px;
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
+    margin-bottom: 50px;
 }
 .box{
     height: 200px;
@@ -145,11 +152,57 @@ div.pullDown a:hover:before
     justify-content: center;
     align-items: center;
 }
-.box h1{
+#hosti{
     color: #B2F042;
 }
 .box p{
     color: white;
     font-size: 12px;
 }
+.box img{
+    margin-top: 10px;
+    height: 100px;
+    width: 115px;
+}
+#booki{
+    color: #D85230;
+}
 
+#watchi{
+    color: #B286FD;
+}
+#hostt{
+    color: #B2F042;
+    margin-left: 50px;
+}
+.belowheader{
+    color: white;
+}
+input[type=text], input[type=number] {
+   
+    font-size: 17px;
+    width: 240px;
+    height: 30px;
+    padding: 10px;
+    background-color: #1C1C1E;
+    border: none;
+    border-radius: 30px;
+    color: #ffffff;
+    font-family: Outfit;
+}
+.upbar input:focus{
+    outline-color: #B2F042;
+}
+.pdt p{
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-top: 50px;
+}
+.pdt{
+    margin: 50px;
+}
+#map {
+    height: 400px;
+    width: 200px;
+  }
